[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Steel.gd" type="Script" id=1]
[ext_resource path="res://Images/block3.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Steel" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="mouse_entered" from="." to="." method="_on_Steel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Steel_mouse_exited"]
